db_security_group.tf
resource "aws_security_group" "mydb" {
  name        = "${var.environment}-database-sg"
  description = "Security group for RDS instances"
  vpc_id      = aws_vpc.myvpc.id

  ingress {
    from_port       = var.db_port
    to_port         = var.db_port
    protocol        = "tcp"
    security_groups = [aws_security_group.application.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "Database Security Group"
  }
}
